--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-Flask==2.0.3
 Flask-SQLAlchemy==2.5.1
 Flask-Migrate==3.1.0
-Werkzeug==2.0.3
-Jinja2==3.0.3
 itsdangerous==2.1.2  # 使用最新的兼容版本
 click==8.0.3
 gunicorn==20.1.0  # 如果你需要在生产环境中部署 Flask
@@ -17,3 +14,6 @@ email-validator==1.1.3
 # 其他依赖项
 SQLAlchemy==1.4.32
 pygame
+cryptography
+mysql. Connector
+PyMySQL
