--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,12 @@ email-validator==1.1.3
 
 # 其他依赖项
 SQLAlchemy==1.4.32
-pygame
-cryptography
+pygame~=2.6.0
+cryptography~=43.0.0
 mysql. Connector
 PyMySQL
 Flask-JWT-Extended
+Werkzeug~=2.3.5
+mysql-connector-python~=9.0.0
+PyJWT~=2.7.0
+Flask~=2.3.2
