--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask-SQLAlchemy==2.5.1
 Flask-Migrate==3.1.0
+flask_cors
 itsdangerous==2.1.2  # 使用最新的兼容版本
 click==8.0.3
 gunicorn==20.1.0  # 如果你需要在生产环境中部署 Flask
