--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,44 @@
+# Flask 相关依赖
+Flask>=2.3.3
 Flask-SQLAlchemy==2.5.1
 Flask-Migrate==3.1.0
 flask_cors
 itsdangerous==2.1.2  # 使用最新的兼容版本
 click==8.0.3
-gunicorn==20.1.0  # 如果你需要在生产环境中部署 Flask
-pandas==1.4.1  # 用于处理 AI 评估的数据（如果不需要可以去掉）
-matplotlib==3.5.1  # 用于绘图展示 AI 性能数据（可选）
-
-# 安全和密码处理
 Flask-WTF==0.15.1
 WTForms==3.0.0
 email-validator==1.1.3
-
-# 其他依赖项
-SQLAlchemy==1.4.32
-pygame~=2.6.0
-cryptography~=43.0.0
-mysql. Connector
-PyMySQL
 Flask-JWT-Extended
-Werkzeug~=2.3.5
+
+# Flask-SocketIO 依赖
+Flask-SocketIO>=5.3.0  # 替换 websocket-client
+python-socketio>=5.5.0
+python-engineio>=4.3.0
+
+# 数据库和SQL相关依赖
+SQLAlchemy==1.4.32
 mysql-connector-python~=9.0.0
+PyMySQL
+
+# 安全和密码处理
+cryptography~=43.0.0
+
+# AI 和数据处理依赖
+pandas==1.4.1
+matplotlib==3.5.1  # 用于绘图展示 AI 性能数据（可选）
+
+# 其他依赖
+pygame~=2.6.0
 PyJWT~=2.7.0
-Flask~=2.3.2
 
+# 生产环境 Web 服务器
+gunicorn>=20.1.0  # 如果你需要在生产环境中部署 Flask
 
-flask-socketio==5.2.0
-websocket-client~=1.8.0
+# 异步 Web 服务器选项 (必选其一)
+gevent>=21.12.0  # 替代 Flasks 的内置服务器，支持 Flask-SocketIO
+# 或者
+eventlet>=0.33.0  # 可选，替代 gevent，支持 Flask-SocketIO
+
+# 开发环境依赖
+Flask~=2.3.3
+Werkzeug>=2.3.7  # 升级Werkzeug以避免MacOS上的kqueue相关问题
