change to aws msyql

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -1,8 +1,8 @@
 [mysql]
-host = rm-uf6wz9309g448ly67no.mysql.rds.aliyuncs.com
+host = ai-game.cfkuy6mi4nng.ap-southeast-2.rds.amazonaws.com
 port = 3306
 database = ai-game
 user = chenghao
-encrypted_password =gAAAAABm7lDveEoiAYFwXOrNnGcrLGPAAzVur5KBmg2bj_EoFczIrjZEoBBJFWVs3wYXV-ihZJ-b1-19St_-9IWbdPal9_SfZg==
+encrypted_password =gAAAAABnSklIg3Xbtd9BLwJ_22-IFjRUqYrwkrfY9KkAZOjbxYpSZmJdrkJUGmQJPC5P2SLRGJAdtRMB-0_JV9VoNlugpXmj5w==
 DB_KEY=L3tLdmglGKFdIeYe9xHLPa_ebkN3TX-NVZGK79ExoQk=
 
