--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -16,7 +16,7 @@ python-socketio>=5.5.0
 python-engineio>=4.3.0
 
 # 数据库和 SQL 相关依赖
-SQLAlchemy==1.4.32
+SQLAlchemy>=1.4.0,<1.5.0
 mysql-connector-python~=9.0.0
 PyMySQL
 
