--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,56 @@
-# Flask 相关依赖
-Flask>=2.3.3
-Flask-SQLAlchemy==2.5.1
-Flask-Migrate==3.1.0
-flask_cors
-itsdangerous==2.1.2  # 使用最新的兼容版本
+alembic==1.16.1
+bidict==0.23.1
+cffi==1.17.1
 click==8.1.3
-Flask-WTF==0.15.1
-WTForms==3.0.0
+contourpy==1.3.2
+cryptography==43.0.3
+cycler==0.12.1
+dnspython==2.7.0
 email-validator==1.1.3
-Flask-JWT-Extended
-
-# Flask-SocketIO 依赖
-Flask-SocketIO>=5.3.0  # 替换 websocket-client
-python-socketio>=5.5.0
-python-engineio>=4.3.0
-
-# 数据库和SQL相关依赖
-SQLAlchemy==1.4.32
-mysql-connector-python~=9.0.0
-PyMySQL
-
-# 安全和密码处理
-cryptography~=43.0.0
-
-# AI 和数据处理依赖
-pandas==1.4.1
-matplotlib==3.5.1  # 用于绘图展示 AI 性能数据（可选）
-
-# 其他依赖
-pygame~=2.6.0
-PyJWT~=2.7.0
-
-# 生产环境 Web 服务器
-gunicorn>=20.1.0  # 如果你需要在生产环境中部署 Flask
-
-# 异步 Web 服务器选项 (必选其一)
-gevent>=21.12.0  # 替代 Flasks 的内置服务器，支持 Flask-SocketIO
-# 或者
-eventlet>=0.33.0  # 可选，替代 gevent，支持 Flask-SocketIO
-
-# 开发环境依赖
-Flask~=2.3.3
-Werkzeug>=2.3.7  # 升级Werkzeug以避免MacOS上的kqueue相关问题
-
-numpy~=1.26.4
-torch~=2.2.2
-websocket-client~=1.8.0
-gradio~=3.33.1
+filelock==3.18.0
+Flask==2.2.5
+flask-cors==6.0.0
+Flask-JWT-Extended==4.7.1
+Flask-Migrate==3.1.0
+Flask-SocketIO==5.5.1
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+fonttools==4.58.1
+fsspec==2025.5.1
+gevent==25.5.1
+greenlet==3.2.2
+gunicorn==23.0.0
+h11==0.16.0
+idna==3.10
+itsdangerous==2.1.2
+Jinja2==3.1.6
+kiwisolver==1.4.8
+Mako==1.3.10
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mpmath==1.3.0
+mysql-connector-python==9.0.0
+networkx==3.5
+numpy==2.2.6
+packaging==25.0
+pillow==11.2.1
+pycparser==2.22
+PyJWT==2.10.1
+PyMySQL==1.1.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-engineio==4.12.2
+python-socketio==5.13.0
+setuptools==80.9.0
+simple-websocket==1.1.0
+six==1.17.0
+SQLAlchemy==1.4.54
+sympy==1.14.0
+torch==2.7.1
+typing_extensions==4.14.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+WTForms==3.0.0
+zope.event==5.0
+zope.interface==7.2
