--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ beautifulsoup4==4.13.4
 bidict==0.23.1
 bleach==6.2.0
 blinker==1.9.0
+boto3==1.35.91
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
